--- a/package.json
+++ b/package.json
@@ -10,18 +10,28 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-material/core": "^1.3.7",
+    "@react-navigation/drawer": "^5.x",
+    "@react-navigation/native": "^6.1.6",
     "expo": "~48.0.15",
+    "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-typography": "^1.4.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "babel-preset-expo": "^9.2.0"
   },
   "private": true
 }
