--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-material/core": "^1.3.7",
-    "@react-navigation/drawer": "^5.x",
+    "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/native": "^6.1.6",
     "expo": "~48.0.15",
     "expo-constants": "~14.2.1",
