--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
@@ -26,6 +27,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-typography": "^1.4.1",
+    "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
