--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-background-upload": "^6.6.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
