--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.3",
     "react-native-background-upload": "^6.6.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.4.0",
     "react-native-typography": "^1.4.1",
     "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.2.0"
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "babel-preset-expo": "^9.2.0"
+    "babel-preset-expo": "^9.3.0"
   },
   "private": true
 }
