--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "~48.0.15",
+    "expo": "^48.0.19",
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-background-upload": "^6.6.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
